--- a/mobility/OD Flow Extractor Class.ipynb
+++ b/mobility/OD Flow Extractor Class.ipynb
@@ -2,258 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 142,
    "id": "42aa830c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
     "import pandas as pd\n",
-    "from glob import glob"
+    "from glob import glob\n",
+    "from od_data_extractor import DataExtractor "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
-   "id": "c2a65045",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class DataExtractor:\n",
-    "    def __init__(self, data_path: str) -> None:\n",
-    "        self.data = pd.DataFrame([])\n",
-    "        self.df = pd.DataFrame([])\n",
-    "        self.data_path = data_path\n",
-    "        vals = pd.read_csv(f'{data_path}/TractID_List.csv', header=None, dtype={'0': str}).values\n",
-    "        self.tract_ids = [str(value[0]) for value in vals]\n",
-    "        self.destination = ''\n",
-    "        self.destinations = []\n",
-    "        dates = []\n",
-    "        for file in timeseries_files:\n",
-    "            if 'TractID_List' in file:\n",
-    "                continue\n",
-    "            else:\n",
-    "                dates.append(file.split('/')[-1].split('.')[0])\n",
-    "        dates.sort()\n",
-    "        self.dates = dates\n",
-    "    \n",
-    "    def set_destination(self, geoid: str) -> None:\n",
-    "        self.destination = geoid\n",
-    "        \n",
-    "    def set_destinations(self, geoids: [str]) -> None:\n",
-    "        self.destinations = geoids\n",
-    "        \n",
-    "    def set_date(self, date: str) -> None:\n",
-    "        self.date = date\n",
-    "        \n",
-    "    def set_data(self, data: pd.core.frame.DataFrame) -> None:\n",
-    "        self.data = data\n",
-    "        \n",
-    "    def load_data(self, date) -> None:\n",
-    "        self.set_date(date)\n",
-    "        self.set_data(pd.read_csv(f\"{self.data_path}/{self.date}.csv\", header=None))\n",
-    "        \n",
-    "    def get_trips_to_d(self) -> pd.core.series:\n",
-    "        d_index = self.tract_ids.index(self.destination)\n",
-    "        return self.data[d_index]\n",
-    "    \n",
-    "    def get_trips_df(self) -> pd.core.frame.DataFrame:\n",
-    "        trips_data = self.get_trips_to_d()\n",
-    "        df = pd.DataFrame(\n",
-    "            zip(\n",
-    "                self.tract_ids, \n",
-    "                [self.destination for i in trips_data],\n",
-    "                trips_data, \n",
-    "                [self.date for i in trips_data]\n",
-    "            )\n",
-    "        )\n",
-    "        df.columns = ['origin', 'destination', 'trips', 'date']\n",
-    "        df = df[df.trips > 0]\n",
-    "        return df\n",
-    "    \n",
-    "    def get_timeseries_df(self, single_d=True) -> pd.core.frame.DataFrame:\n",
-    "        for idx, date in enumerate(self.dates):\n",
-    "            self.load_data(date)\n",
-    "            if idx == 0:\n",
-    "                df = self.get_trips_df()\n",
-    "            else:\n",
-    "                df = pd.concat([df, self.get_trips_df()])\n",
-    "        if (single_d):\n",
-    "            self.df = df\n",
-    "        return df\n",
-    "    \n",
-    "    def get_timeseries_df_multi(self) -> pd.core.frame.DataFrame:\n",
-    "        for idx, date in enumerate(self.dates):\n",
-    "            self.load_data(date)\n",
-    "            for nested_idx, geoid in enumerate(self.destinations):\n",
-    "                self.set_destination(geoid)\n",
-    "                if idx+nested_idx == 0:\n",
-    "                    df = self.get_trips_df()\n",
-    "                else:\n",
-    "                    df = pd.concat([df, self.get_trips_df()])\n",
-    "        self.df = df\n",
-    "        return df\n",
-    "        \n",
-    "    def export_csv(self, path: str) -> None:\n",
-    "        self.df.to_csv(path, index=False)\n",
-    "        \n",
-    "    def export_parquet(self, path: str) -> None:\n",
-    "        self.df.to_parquet(path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "id": "84c5a282",
+   "execution_count": null,
+   "id": "984fc89a",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>origin</th>\n",
-       "      <th>destination</th>\n",
-       "      <th>trips</th>\n",
-       "      <th>date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>17031010501</td>\n",
-       "      <td>17031838800</td>\n",
-       "      <td>205</td>\n",
-       "      <td>2019-12-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>17031020901</td>\n",
-       "      <td>17031838800</td>\n",
-       "      <td>99</td>\n",
-       "      <td>2019-12-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>17031030601</td>\n",
-       "      <td>17031838800</td>\n",
-       "      <td>271</td>\n",
-       "      <td>2019-12-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>209</th>\n",
-       "      <td>17031170500</td>\n",
-       "      <td>17031838800</td>\n",
-       "      <td>164</td>\n",
-       "      <td>2019-12-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>239</th>\n",
-       "      <td>17031210400</td>\n",
-       "      <td>17031838800</td>\n",
-       "      <td>188</td>\n",
-       "      <td>2019-12-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2135</th>\n",
-       "      <td>18089043401</td>\n",
-       "      <td>17031838800</td>\n",
-       "      <td>142</td>\n",
-       "      <td>2022-04-25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2136</th>\n",
-       "      <td>18089043403</td>\n",
-       "      <td>17031838800</td>\n",
-       "      <td>215</td>\n",
-       "      <td>2022-04-25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2150</th>\n",
-       "      <td>18127050407</td>\n",
-       "      <td>17031838800</td>\n",
-       "      <td>142</td>\n",
-       "      <td>2022-04-25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2151</th>\n",
-       "      <td>18127050501</td>\n",
-       "      <td>17031838800</td>\n",
-       "      <td>77</td>\n",
-       "      <td>2022-04-25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2156</th>\n",
-       "      <td>18127050508</td>\n",
-       "      <td>17031838800</td>\n",
-       "      <td>142</td>\n",
-       "      <td>2022-04-25</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>16142 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           origin  destination  trips        date\n",
-       "5     17031010501  17031838800    205  2019-12-30\n",
-       "23    17031020901  17031838800     99  2019-12-30\n",
-       "33    17031030601  17031838800    271  2019-12-30\n",
-       "209   17031170500  17031838800    164  2019-12-30\n",
-       "239   17031210400  17031838800    188  2019-12-30\n",
-       "...           ...          ...    ...         ...\n",
-       "2135  18089043401  17031838800    142  2022-04-25\n",
-       "2136  18089043403  17031838800    215  2022-04-25\n",
-       "2150  18127050407  17031838800    142  2022-04-25\n",
-       "2151  18127050501  17031838800     77  2022-04-25\n",
-       "2156  18127050508  17031838800    142  2022-04-25\n",
-       "\n",
-       "[16142 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 136,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "d_geoid = '17031838800'\n",
     "\n",
     "chicago = DataExtractor('./data/chicago')\n",
     "chicago.set_destination(d_geoid)\n",
-    "chicago.get_timeseries_df()\n",
-    "# chicago.export_parquet(f'./output/{destination_geoid}2.parquet')\n"
+    "chicago.get_timeseries_df()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "f1fdbc05",
+   "id": "69ebd54f",
    "metadata": {
     "scrolled": true
    },
@@ -394,29 +173,7 @@
     "d_geoids = ['17031838800','17031550100']\n",
     "chicago = DataExtractor('./data/chicago')\n",
     "chicago.set_destinations(d_geoids)\n",
-    "chicago.get_timeseries_df_multi()\n",
-    "# chicago.export_parquet(f'./output/chicago_park_visits.parquet')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
-   "id": "306a9d6f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['17031838800', '17031550100'], dtype=object)"
-      ]
-     },
-     "execution_count": 139,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "chicago.df.destination.unique()"
+    "chicago.get_timeseries_df_multi()\n"
    ]
   }
  ],
