--- a/mobility/OD Flow Extractor Class.ipynb
+++ b/mobility/OD Flow Extractor Class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 1,
    "id": "42aa830c",
    "metadata": {},
    "outputs": [],
@@ -15,27 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "984fc89a",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "d_geoid = '17031838800'\n",
-    "\n",
-    "chicago = DataExtractor('./data/chicago')\n",
-    "chicago.set_destination(d_geoid)\n",
-    "chicago.get_timeseries_df()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 138,
-   "id": "69ebd54f",
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 2,
+   "id": "17afd009",
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -66,38 +48,38 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>17031010501</td>\n",
-       "      <td>17031838800</td>\n",
-       "      <td>205</td>\n",
+       "      <th>0</th>\n",
+       "      <td>6007000102</td>\n",
+       "      <td>6007000102</td>\n",
+       "      <td>2605</td>\n",
        "      <td>2019-12-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>17031020901</td>\n",
-       "      <td>17031838800</td>\n",
-       "      <td>99</td>\n",
+       "      <th>1</th>\n",
+       "      <td>6007000103</td>\n",
+       "      <td>6007000102</td>\n",
+       "      <td>2691</td>\n",
        "      <td>2019-12-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>17031030601</td>\n",
-       "      <td>17031838800</td>\n",
-       "      <td>271</td>\n",
+       "      <th>2</th>\n",
+       "      <td>6007000104</td>\n",
+       "      <td>6007000102</td>\n",
+       "      <td>1469</td>\n",
        "      <td>2019-12-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>209</th>\n",
-       "      <td>17031170500</td>\n",
-       "      <td>17031838800</td>\n",
-       "      <td>164</td>\n",
+       "      <th>3</th>\n",
+       "      <td>6007000201</td>\n",
+       "      <td>6007000102</td>\n",
+       "      <td>1343</td>\n",
        "      <td>2019-12-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>239</th>\n",
-       "      <td>17031210400</td>\n",
-       "      <td>17031838800</td>\n",
-       "      <td>188</td>\n",
+       "      <th>4</th>\n",
+       "      <td>6007000202</td>\n",
+       "      <td>6007000102</td>\n",
+       "      <td>975</td>\n",
        "      <td>2019-12-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -108,73 +90,146 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2131</th>\n",
-       "      <td>18089043102</td>\n",
-       "      <td>17031550100</td>\n",
-       "      <td>76</td>\n",
+       "      <th>40</th>\n",
+       "      <td>6007002900</td>\n",
+       "      <td>6007000102</td>\n",
+       "      <td>404</td>\n",
        "      <td>2022-04-25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2143</th>\n",
-       "      <td>18127050101</td>\n",
-       "      <td>17031550100</td>\n",
-       "      <td>100</td>\n",
+       "      <th>43</th>\n",
+       "      <td>6007003100</td>\n",
+       "      <td>6007000102</td>\n",
+       "      <td>114</td>\n",
        "      <td>2022-04-25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2150</th>\n",
-       "      <td>18127050407</td>\n",
-       "      <td>17031550100</td>\n",
-       "      <td>46</td>\n",
+       "      <th>45</th>\n",
+       "      <td>6007003300</td>\n",
+       "      <td>6007000102</td>\n",
+       "      <td>68</td>\n",
        "      <td>2022-04-25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2157</th>\n",
-       "      <td>18127050509</td>\n",
-       "      <td>17031550100</td>\n",
-       "      <td>260</td>\n",
+       "      <th>48</th>\n",
+       "      <td>6007003502</td>\n",
+       "      <td>6007000102</td>\n",
+       "      <td>62</td>\n",
        "      <td>2022-04-25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2166</th>\n",
-       "      <td>18127051002</td>\n",
-       "      <td>17031550100</td>\n",
-       "      <td>108</td>\n",
+       "      <th>50</th>\n",
+       "      <td>6007003700</td>\n",
+       "      <td>6007000102</td>\n",
+       "      <td>179</td>\n",
        "      <td>2022-04-25</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>30698 rows × 4 columns</p>\n",
+       "<p>3793 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           origin  destination  trips        date\n",
-       "5     17031010501  17031838800    205  2019-12-30\n",
-       "23    17031020901  17031838800     99  2019-12-30\n",
-       "33    17031030601  17031838800    271  2019-12-30\n",
-       "209   17031170500  17031838800    164  2019-12-30\n",
-       "239   17031210400  17031838800    188  2019-12-30\n",
-       "...           ...          ...    ...         ...\n",
-       "2131  18089043102  17031550100     76  2022-04-25\n",
-       "2143  18127050101  17031550100    100  2022-04-25\n",
-       "2150  18127050407  17031550100     46  2022-04-25\n",
-       "2157  18127050509  17031550100    260  2022-04-25\n",
-       "2166  18127051002  17031550100    108  2022-04-25\n",
+       "        origin destination  trips        date\n",
+       "0   6007000102  6007000102   2605  2019-12-30\n",
+       "1   6007000103  6007000102   2691  2019-12-30\n",
+       "2   6007000104  6007000102   1469  2019-12-30\n",
+       "3   6007000201  6007000102   1343  2019-12-30\n",
+       "4   6007000202  6007000102    975  2019-12-30\n",
+       "..         ...         ...    ...         ...\n",
+       "40  6007002900  6007000102    404  2022-04-25\n",
+       "43  6007003100  6007000102    114  2022-04-25\n",
+       "45  6007003300  6007000102     68  2022-04-25\n",
+       "48  6007003502  6007000102     62  2022-04-25\n",
+       "50  6007003700  6007000102    179  2022-04-25\n",
        "\n",
-       "[30698 rows x 4 columns]"
+       "[3793 rows x 4 columns]"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d_geoids = ['17031838800','17031550100']\n",
-    "chicago = DataExtractor('./data/chicago')\n",
-    "chicago.set_destinations(d_geoids)\n",
-    "chicago.get_timeseries_df_multi()\n"
+    "chico = DataExtractor('./data/C/Chico, CA Metro Area')\n",
+    "chico.set_destination(chico.tract_ids[0])\n",
+    "chico.get_timeseries_df()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "915e8daa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "6f331017",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "UFuncTypeError",
+     "evalue": "ufunc 'add' did not contain a loop with signature matching types (dtype('<U1'), dtype('int64')) -> None",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUFuncTypeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/_y/284fkkbx5ds5l26pc40_whjc0000gn/T/ipykernel_36505/722985395.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0md_geoid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'17031838800'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mchicago\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDataExtractor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./data/chicago'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mchicago\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_destination\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md_geoid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# chicago.get_timeseries_df()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/GitHub/IC2S2_Datathon/mobility/od_data_extractor.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data_path)\u001b[0m\n\u001b[1;32m     18\u001b[0m                 \u001b[0mdates\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0mdates\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdates\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdates\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mset_destination\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgeoid\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUFuncTypeError\u001b[0m: ufunc 'add' did not contain a loop with signature matching types (dtype('<U1'), dtype('int64')) -> None"
+     ]
+    }
+   ],
+   "source": [
+    "d_geoid = '17031838800'\n",
+    "\n",
+    "chicago = DataExtractor('./data/chicago')\n",
+    "chicago.set_destination(d_geoid)\n",
+    "# chicago.get_timeseries_df()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7319f49a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6e8dba60",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UFuncTypeError",
+     "evalue": "ufunc 'add' did not contain a loop with signature matching types (dtype('<U1'), dtype('int64')) -> None",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUFuncTypeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/_y/284fkkbx5ds5l26pc40_whjc0000gn/T/ipykernel_36505/3455182695.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mchico\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDataExtractor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./data/C/Chico, CA Metro Area'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mchico\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_destination\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchico\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtract_ids\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mchico\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_timeseries_df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Documents/GitHub/IC2S2_Datathon/mobility/od_data_extractor.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data_path)\u001b[0m\n\u001b[1;32m     18\u001b[0m                 \u001b[0mtract_ids\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m                 \u001b[0mtract_ids\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"0{val}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtract_ids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtract_ids\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0;31m# get dates\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUFuncTypeError\u001b[0m: ufunc 'add' did not contain a loop with signature matching types (dtype('<U1'), dtype('int64')) -> None"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3ff844f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
