--- a/datathon/notebooks/OD Flow Extractor.ipynb
+++ b/datathon/notebooks/OD Flow Extractor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "42aa830c",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "ed50ce34",
    "metadata": {},
    "outputs": [],
@@ -26,17 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f258542a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "17afd009",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -68,37 +62,37 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>6007000102</td>\n",
-       "      <td>6007000102</td>\n",
-       "      <td>2605</td>\n",
+       "      <td>17031010100</td>\n",
+       "      <td>17031010100</td>\n",
+       "      <td>4052</td>\n",
        "      <td>2019-12-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>6007000103</td>\n",
-       "      <td>6007000102</td>\n",
-       "      <td>2691</td>\n",
+       "      <td>17031010201</td>\n",
+       "      <td>17031010100</td>\n",
+       "      <td>416</td>\n",
        "      <td>2019-12-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>6007000104</td>\n",
-       "      <td>6007000102</td>\n",
-       "      <td>1469</td>\n",
+       "      <td>17031010202</td>\n",
+       "      <td>17031010100</td>\n",
+       "      <td>511</td>\n",
        "      <td>2019-12-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>6007000201</td>\n",
-       "      <td>6007000102</td>\n",
-       "      <td>1343</td>\n",
+       "      <td>17031010300</td>\n",
+       "      <td>17031010100</td>\n",
+       "      <td>542</td>\n",
        "      <td>2019-12-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>6007000202</td>\n",
-       "      <td>6007000102</td>\n",
-       "      <td>975</td>\n",
+       "      <td>17031010400</td>\n",
+       "      <td>17031010100</td>\n",
+       "      <td>469</td>\n",
        "      <td>2019-12-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -109,138 +103,84 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>6007002900</td>\n",
-       "      <td>6007000102</td>\n",
-       "      <td>404</td>\n",
+       "      <th>1687</th>\n",
+       "      <td>17097861107</td>\n",
+       "      <td>17031010100</td>\n",
+       "      <td>81</td>\n",
        "      <td>2022-04-25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>6007003100</td>\n",
-       "      <td>6007000102</td>\n",
-       "      <td>114</td>\n",
+       "      <th>1700</th>\n",
+       "      <td>17097861507</td>\n",
+       "      <td>17031010100</td>\n",
+       "      <td>90</td>\n",
        "      <td>2022-04-25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>6007003300</td>\n",
-       "      <td>6007000102</td>\n",
-       "      <td>68</td>\n",
+       "      <th>1713</th>\n",
+       "      <td>17097861803</td>\n",
+       "      <td>17031010100</td>\n",
+       "      <td>55</td>\n",
        "      <td>2022-04-25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>6007003502</td>\n",
-       "      <td>6007000102</td>\n",
-       "      <td>62</td>\n",
+       "      <th>2047</th>\n",
+       "      <td>18089012500</td>\n",
+       "      <td>17031010100</td>\n",
+       "      <td>73</td>\n",
        "      <td>2022-04-25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50</th>\n",
-       "      <td>6007003700</td>\n",
-       "      <td>6007000102</td>\n",
-       "      <td>179</td>\n",
+       "      <th>2054</th>\n",
+       "      <td>18089020400</td>\n",
+       "      <td>17031010100</td>\n",
+       "      <td>73</td>\n",
        "      <td>2022-04-25</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3793 rows × 4 columns</p>\n",
+       "<p>5792 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        origin destination  trips        date\n",
-       "0   6007000102  6007000102   2605  2019-12-30\n",
-       "1   6007000103  6007000102   2691  2019-12-30\n",
-       "2   6007000104  6007000102   1469  2019-12-30\n",
-       "3   6007000201  6007000102   1343  2019-12-30\n",
-       "4   6007000202  6007000102    975  2019-12-30\n",
-       "..         ...         ...    ...         ...\n",
-       "40  6007002900  6007000102    404  2022-04-25\n",
-       "43  6007003100  6007000102    114  2022-04-25\n",
-       "45  6007003300  6007000102     68  2022-04-25\n",
-       "48  6007003502  6007000102     62  2022-04-25\n",
-       "50  6007003700  6007000102    179  2022-04-25\n",
+       "           origin  destination  trips        date\n",
+       "0     17031010100  17031010100   4052  2019-12-30\n",
+       "1     17031010201  17031010100    416  2019-12-30\n",
+       "2     17031010202  17031010100    511  2019-12-30\n",
+       "3     17031010300  17031010100    542  2019-12-30\n",
+       "4     17031010400  17031010100    469  2019-12-30\n",
+       "...           ...          ...    ...         ...\n",
+       "1687  17097861107  17031010100     81  2022-04-25\n",
+       "1700  17097861507  17031010100     90  2022-04-25\n",
+       "1713  17097861803  17031010100     55  2022-04-25\n",
+       "2047  18089012500  17031010100     73  2022-04-25\n",
+       "2054  18089020400  17031010100     73  2022-04-25\n",
        "\n",
-       "[3793 rows x 4 columns]"
+       "[5792 rows x 4 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "chico = DataExtractor('./data/C/Chico, CA Metro Area')\n",
-    "chico.set_destination(chico.tract_ids[0])\n",
-    "chico.get_timeseries_df()"
+    "chi = DataExtractor('../data/raw/sg_chicago')\n",
+    "chi.set_destination(chi.tract_ids[0])\n",
+    "chi.get_timeseries_df()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "915e8daa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "6f331017",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "ename": "UFuncTypeError",
-     "evalue": "ufunc 'add' did not contain a loop with signature matching types (dtype('<U1'), dtype('int64')) -> None",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUFuncTypeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/_y/284fkkbx5ds5l26pc40_whjc0000gn/T/ipykernel_36505/722985395.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0md_geoid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'17031838800'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mchicago\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDataExtractor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./data/chicago'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mchicago\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_destination\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md_geoid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# chicago.get_timeseries_df()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/GitHub/IC2S2_Datathon/mobility/od_data_extractor.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data_path)\u001b[0m\n\u001b[1;32m     18\u001b[0m                 \u001b[0mdates\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0mdates\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdates\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdates\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mset_destination\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgeoid\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUFuncTypeError\u001b[0m: ufunc 'add' did not contain a loop with signature matching types (dtype('<U1'), dtype('int64')) -> None"
-     ]
-    }
-   ],
-   "source": [
-    "d_geoid = '17031838800'\n",
-    "\n",
-    "chicago = DataExtractor('./data/chicago')\n",
-    "chicago.set_destination(d_geoid)\n",
-    "# chicago.get_timeseries_df()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7319f49a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "6e8dba60",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "UFuncTypeError",
-     "evalue": "ufunc 'add' did not contain a loop with signature matching types (dtype('<U1'), dtype('int64')) -> None",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUFuncTypeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/_y/284fkkbx5ds5l26pc40_whjc0000gn/T/ipykernel_36505/3455182695.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mchico\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDataExtractor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'./data/C/Chico, CA Metro Area'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mchico\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_destination\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchico\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtract_ids\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mchico\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_timeseries_df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/GitHub/IC2S2_Datathon/mobility/od_data_extractor.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data_path)\u001b[0m\n\u001b[1;32m     18\u001b[0m                 \u001b[0mtract_ids\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m                 \u001b[0mtract_ids\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"0{val}\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtract_ids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtract_ids\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0;31m# get dates\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUFuncTypeError\u001b[0m: ufunc 'add' did not contain a loop with signature matching types (dtype('<U1'), dtype('int64')) -> None"
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "chi = DataExtractor('../data/raw/sg_chicago')\n",
+    "chi.set_destinations(chi.tract_ids[0:2])\n",
+    "chi.get_timeseries_df_multi()"
+   ]
   },
   {
    "cell_type": "code",
